--- a/about.html
+++ b/about.html
@@ -25,11 +25,11 @@
             <h4> About </h4>
             <hr>
             <p> This website has been created to let you embed encrypted messages in an image and then extract them back</p>
-            <p> Project repository on github.com : @ <a href="https://github.com/InputBlackBoxOutput/Image_Steganographer">https://github.com/InputBlackBoxOutput/Image_Steganographer</a></p>
+            <p> Project repository on github.com : @ <a href="https://github.com/InputBlackBoxOutput/Image-Steganographer">  Image_Steganographer </a></p>
             <p> Created by Rutuparn Pawar < InputBlackBoxOutput > </p>
             <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator of this website cannot be held resposible in case of misuse of this website for activities not permitted by law in the the user's country</h5>
             <br>
-            <a href="index.html"><img src="img/back.png" height="40"></a>
+            <a href="index.html"><img src="img/back.png" height="40" alt="back"></a>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
