--- a/how_to_use.html
+++ b/how_to_use.html
@@ -35,7 +35,7 @@
             	<li> When a success message is shown, see the section below for the message</li>
             </ol>
             <br>
-            <a href="index.html"><img src="img/back.png" height="40"></a>
+            <a href="index.html"><img src="img/back.png" height="40" alt="back"></a>
         </div>
 
         <div class="row">
