Google analytics added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html lang="en">
     <head>
+	    <!-- Global site tag (gtag.js) - Google Analytics -->
+	    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168647709-3"></script>
+	    <script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-168647709-3');
+	    </script>
+
 	    <meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	    <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	    <title> Steganographer </title>
+	    <title> Image Steganographer </title>
+	    <meta name="description" content="Embed encrypted messages in an image and then extract them back">
     </head>
 
     <body style="background-color: grey">
