Corrected 'How to use?'

--- a/how_to_use.html
+++ b/how_to_use.html
@@ -21,8 +21,7 @@
             	<li> Upload an image. Alternatively you can use a random image provided by the website</li>
             	<li> Enter the keyword </li>
             	<li> Enter the message </li>
-            	<li> Press the embed button </li>
-            	<li> When a success message is shown, press the download button </li>
+            	<li> Press the embed & download button </li>
             </ol>
             <br>
             <h4> How to use the extractor? </h4>
