Minor changes to text

--- a/index.html
+++ b/index.html
@@ -134,15 +134,13 @@
             <h2>Wondering how it works?</h2>
             <hr>
 
-            <h4> This is an application of <b> Steganography </b> </h4>
-            <hr>
-            <p> Steganography is the practice of concealing a file, message, image, or video within another file, message, image, or video. Steganography is concerned both with concealing the fact that a secret message is being sent and its contents while cryptography is the practice of protecting the contents of a message alone.</p>
+            <p>  This is an application of <b> Steganography</b>. Steganography is the practice of concealing a file, message, image, or video within another file, message, image, or video. Steganography is concerned both with concealing the fact that a secret message is being sent and its contents while cryptography is the practice of protecting the contents of a message alone.</p>
 
             <p>The advantage of steganography over cryptography alone is that the intended secret message does not attract attention to itself as an object of scrutiny. Plainly visible encrypted messages, no matter how unbreakable they are, arouse interest. </p>
             <p><b> Source:</b> <a href="https://en.wikipedia.org/wiki/Steganography"> Wikipedia </a></p>
             
             <br>
-            <h4>The process of hiding and retriving message in an image</h4>
+            <h4>Process of hiding and retriving message in an image</h4>
             <p> We get an image, a keyword and a message from the user. The message is encrypted with the help of the user provided keyword by using Vigenere's cipher.</p>
             <p> Certain binary data in the image is modified to represent the encrypted message. The image looks perfectly normal to the human eye even after embedding the message in the image.</p>
             <p> When someone wants to access the message, he/she has to provide the image and the keyword. The encrypted message is extracted from the image and then decrypted using the keyword.</p>
