--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <br>
             <a href="index.html"><img src="img/back.png" height="40" alt="back"></a>
         </div>
-        <div class="row">
+        <div class="row m-0 p-0">
             <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
                 <p class="h6"> This website has been hosted by Github Pages </p>
                 <p class="h6">© 2020 Rutuparn Pawar < <a style="color: white" href="https://github.com/InputBlackBoxOutput">InputBlackBoxOutput<a> ></p>
