--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
 
                         <div >
                             <button id="embed" type="button" class="btn m-2 btn-success btn-lg"> Embed & Download</button>
-                            </style>
                         </div>
                         <div class="col mt-2">
                             <div id="user-msg-one" class="alert alert-danger" role="alert"> <!-- Options: danger and success -->   
@@ -158,7 +157,7 @@
             <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator of this website cannot be held resposible in case of misuse of this website for activities not permitted by law in the the user's country</h5>
         </div>
 
-        <div class="row" style="background-color: #343A40">
+        <div class="row m-0 p-0" style="background-color: #343A40">
             <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
                 <p class="h6"> This website has been hosted by Github Pages </p>
                 <p class="h6">© 2020 Rutuparn Pawar < <a style="color: white" href="https://github.com/InputBlackBoxOutput">InputBlackBoxOutput<a> ></p>
