Random image feature commented out

--- a/index.html
+++ b/index.html
@@ -34,19 +34,6 @@
           </div>
         </nav>
 
-<!--         <div class="container-fluid my-2 py-3" style="background-color: white" >
-        	<div class="row m-2 mt-3">   		    
-        		<div class="col-sm-4">
-        			<h1 style="font-size: 60px;"> This cat can hold more than just the tesseract </h1>
-        		</div>
-        		<div class="col-sm-5 p-3 m-1">
-        			<img src="img/cat.jpg">
-        		</div>
-			</div>
-        </div> -->
-
-        <!-- <canvas id="canvas"></canvas> -->
-
 		<div id="main" class="container-fluid my-2 py-3" style="background-color: white" >
 			<h2> Embedder </h2>	
 			<hr>				
@@ -56,9 +43,10 @@
                         <img id="img" style="border: 2px #AFAFAF solid" class="img-fluid" height="300" width="300" src="img/blank.png" alt="Upload an image">
                     </div>
                     <div class="row mt-2 d-flex justify-content-center">
-                        <button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem"> Upload </button>
-                        <button id="open-rand" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem;"> Use a random image </button>
-                    </div>          
+                        <!-- <button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem"> Upload </button> -->
+                        <!-- <button id="open-rand" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem;"> Use a random image </button> -->
+						<button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 15rem"> Upload </button>
+					</div>          
                 </div>
                 <div class="col ml-2 mt-3">
                     <form>
@@ -127,6 +115,24 @@
 			</div>
 		</div>
 
+		<div class="container-fluid my-2 py-3" style="background-color: white" >
+			<hr>
+			<div class="row mx-2">
+				<div class="col"> 
+					<div class="d-flex justify-content-center">
+						<img src="img/goose.jpg" alt="Captian marvel's cat">
+					</div>
+					<label class="h2 text-muted text-center"> This cat can hold more than just the Tesseract </label>	
+				</div>
+				<div class="col">
+					<div class="d-flex justify-content-center">				
+						<img src="img/area51.jpg" alt="Area 51">  		
+					</div>
+					<label class="h2 text-muted text-center"> Area 51 can hold on to a lot of secrects, add in your own </label>		
+				</div>
+			</div>
+			<hr>
+        </div>
 
 
         <div class="container-fluid my-2 py-3" style="background-color: white;" >
