Random image feature fixed

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                         <img id="img" style="border: 2px #AFAFAF solid" class="img-fluid" height="300" width="300" src="img/blank.png" alt="Upload an image">
                     </div>
                     <div class="row mt-2 d-flex justify-content-center">
-                        <!-- <button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem"> Upload </button> -->
-                        <!-- <button id="open-rand" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem;"> Use a random image </button> -->
-						<button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 15rem"> Upload </button>
+                        <button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem"> Upload </button> 
+                        <button id="open-rand" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem;"> Use a random image </button> 
+						<!-- <button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 15rem"> Upload </button>-->
 					</div>          
                 </div>
                 <div class="col ml-2 mt-3">
@@ -122,13 +122,13 @@
 					<div class="d-flex justify-content-center">
 						<img src="img/goose.jpg" alt="Captian marvel's cat">
 					</div>
-					<label class="h2 text-muted text-center"> This cat can hold more than just the Tesseract </label>	
+					<a href="#main"> <label id="goose" class="h2 text-center" style="text-decoration: underline;">&#128279; FYI: This cat can hold more than just the Tesseract. Let it hold on to your secrets. </label></a>	
 				</div>
 				<div class="col">
 					<div class="d-flex justify-content-center">				
 						<img src="img/area51.jpg" alt="Area 51">  		
 					</div>
-					<label class="h2 text-muted text-center"> Area 51 can hold on to a lot of secrects, add in your own </label>		
+					<a href="#main"> <label id="area51" class="h2 text-center" style="text-decoration: underline;">&#128279; Area 51 can hold a lot of secrets, add in your own.</label></a>		
 				</div>
 			</div>
 			<hr>
@@ -150,7 +150,7 @@
             <p> Certain binary data in the image is modified to represent the encrypted message. The image looks perfectly normal to the human eye even after embedding the message in the image.</p>
             <p> When someone wants to access the message, he/she has to provide the image and the keyword. The encrypted message is extracted from the image and then decrypted using the keyword.</p>
 
-            <a href="#main"> <h2>Try it out now!</h2> </a>
+            <a href="#main"> <label class="h2" style="text-decoration: underline;">Try it out now!</label> </a>
             
             <hr>
             <style type="text/css">
