Typos in disclaimer corrected

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
             <p> This website has been created to let you embed encrypted messages in an image and then extract them back</p>
             <p> Project repository on github.com : @ <a href="https://github.com/InputBlackBoxOutput/Image-Steganographer">  Image_Steganographer </a></p>
             <p> Created by Rutuparn Pawar < InputBlackBoxOutput > </p>
-            <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator of this website cannot be held resposible in case of misuse of this website for activities not permitted by law in the the user's country</h5>
+            <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator/s of this website cannot be held responsible in case of misuse of this website for activities not permitted by law in the user's country </h5>
             <br>
             <a href="index.html"><img src="img/back.png" height="40" alt="back"></a>
         </div>
