--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             
             <br>
             <h4>Process of hiding and retriving message in an image</h4>
-            <p> We get an image, a keyword and a message from the user. The message is encrypted with the help of the user provided keyword by using Vigenere's cipher.</p>
+            <p> We get an image, a keyword and a message from the user. The message is encrypted with the help of the user-provided keyword by using Vigenere's cipher.</p>
             <p> Certain binary data in the image is modified to represent the encrypted message. The image looks perfectly normal to the human eye even after embedding the message in the image.</p>
             <p> When someone wants to access the message, he/she has to provide the image and the keyword. The encrypted message is extracted from the image and then decrypted using the keyword.</p>
 
@@ -160,7 +160,7 @@
                     border-radius: 10px; 
                     padding: 10px;
             </style>
-            <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator of this website cannot be held resposible in case of misuse of this website for activities not permitted by law in the the user's country</h5>
+            <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator/s of this website cannot be held responsible in case of misuse of this website for activities not permitted by law in the user's country</h5>
         </div>
 
         <div class="row m-0 p-0" style="background-color: #343A40">
