Page scroll smoothened

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="scroll-behavior: smooth;">
     <head>
 	    <!-- Global site tag (gtag.js) - Google Analytics -->
 	    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168647709-3"></script>
@@ -142,7 +142,7 @@
             <p>  This is an application of <b> Steganography</b>. Steganography is the practice of concealing a file, message, image, or video within another file, message, image, or video. Steganography is concerned both with concealing the fact that a secret message is being sent and its contents while cryptography is the practice of protecting the contents of a message alone.</p>
 
             <p>The advantage of steganography over cryptography alone is that the intended secret message does not attract attention to itself as an object of scrutiny. Plainly visible encrypted messages, no matter how unbreakable they are, arouse interest. </p>
-            <p><b> Source:</b> <a href="https://en.wikipedia.org/wiki/Steganography"> Wikipedia </a></p>
+            <p><b> Source:</b> <a href="https://en.wikipedia.org/wiki/Steganography" target="_blank"> Wikipedia </a></p>
             
             <br>
             <h4>Process of hiding and retriving message in an image</h4>
