--- a/index.html
+++ b/index.html
@@ -118,19 +118,30 @@
 		<div class="container-fluid my-2 py-3" style="background-color: white" >
 			<hr>
 			<div class="row mx-2">
-				<div class="col"> 
-					<div class="d-flex justify-content-center">
-						<img src="img/goose.jpg" alt="Captian marvel's cat">
-					</div>
-					<a href="#main"> <label id="goose" class="h2 text-center" style="text-decoration: underline;">&#128279; FYI: This cat can hold more than just the Tesseract. Let it hold on to your secrets. </label></a>	
-				</div>
-				<div class="col">
-					<div class="d-flex justify-content-center">				
-						<img src="img/area51.jpg" alt="Area 51">  		
-					</div>
-					<a href="#main"> <label id="area51" class="h2 text-center" style="text-decoration: underline;">&#128279; Area 51 can hold a lot of secrets, add in your own.</label></a>		
-				</div>
-			</div>
+				<div class="col px-5"> 
+                    <div class="row d-flex justify-content-center text-center">
+                        <label class="h5 text-center">FYI: This cat can hold more than just the Tesseract.</label>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <img src="img/goose.jpg" alt="Captian marvel's cat">
+                    </div>
+                    <div class="row d-flex justify-content-center text-center">
+                        <a href="#main"> <label id="goose" class="h6 text-center" style="text-decoration: underline;"> Use this image </label></a>
+                    </div>
+                </div>
+
+                <div class="col px-5">
+                    <div class="row d-flex justify-content-center text-center">
+                    <label class="h5 text-center">Area 51 can hold a lot of secrets, add in your own.</label>
+                    </div>
+                    <div class="row d-flex justify-content-center">
+                        <img src="img/area51.jpg" alt="Area 51">
+                    </div>
+                    <div class="row d-flex justify-content-center text-center">
+                    <a href="#main"> <label id="area51" class="h6 text-center" style="text-decoration: underline;"> Use this image </label></a>
+                    </div>
+                </div>
+            </div>
 			<hr>
         </div>
 
@@ -148,6 +159,10 @@
             <h4>Process of hiding and retriving message in an image</h4>
             <p> We get an image, a keyword and a message from the user. The message is encrypted with the help of the user-provided keyword by using Vigenere's cipher.</p>
             <p> Certain binary data in the image is modified to represent the encrypted message. The image looks perfectly normal to the human eye even after embedding the message in the image.</p>
+            
+            <p> <i>The following image shows the process flow </i></p>
+            <img src="img/flow.png">
+            
             <p> When someone wants to access the message, he/she has to provide the image and the keyword. The encrypted message is extracted from the image and then decrypted using the keyword.</p>
 
             <a href="#main"> <label class="h2" style="text-decoration: underline;">Try it out now!</label> </a>
