--- a/index.html
+++ b/index.html
@@ -167,15 +167,16 @@
             <hr>
             <style type="text/css">
                 #disclaimer {
-                    color: #FF2020; 
-                    border: 2px #FF4A4A solid;
-                    border-radius: 10px; 
-                    padding: 10px;
+                        color: #FF2020; 
+                        border: 2px #FF4A4A solid;
+                        border-radius: 10px; 
+                        padding: 10px;
+                    }
             </style>
             <h5 id="disclaimer"> <b>Legal Disclaimer:</b> The creator/s of this website cannot be held responsible in case of misuse of this website for activities not permitted by law in the users country</h5>
         </div>
 
-        <div class="row m-0 p-0" style="background-color: #343A40">
+        <div class="row m-0 p-0" style="background-color: #343A40;">
             <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
                 <p class="h6">© 2020 Rutuparn Pawar ( <a style="color: white" href="https://github.com/InputBlackBoxOutput">InputBlackBoxOutput<a> )</p>
             </div>
@@ -251,6 +252,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
+        <script type="text/javascript" src="cipher.js"></script>
         <script type="text/javascript" src="steganographer.js"></script>
 	</body>
 </html>
