--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <body style="background-color: grey">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <a class="navbar-brand"><h3>Image Steganographer</h3> </a>
-          <div class="navbar-collapse float-right">
+          <div class="navbar-collapse">
             <ul class="navbar-nav ml-auto">
-                <label class="btn rounded btn-secondary mr-2 mb-0" data-toggle="modal" data-target="#howToUseModal"> How to use? </label>
-                <label class="btn rounded btn-secondary mb-0" data-toggle="modal" data-target="#aboutModal"> About </label>
+                <label class="btn rounded btn-secondary mr-1 mb-0 mt-1" data-toggle="modal" data-target="#howToUseModal"> How to use? </label>
+                <label class="btn rounded btn-secondary mr-1 mb-0 mt-1" data-toggle="modal" data-target="#aboutModal"> About </label>
             </ul>
           </div>
         </nav>
@@ -158,7 +158,7 @@
             <p> Certain binary data in the image is modified to represent the encrypted message. The image looks perfectly normal to the human eye even after embedding the message in the image.</p>
             
             <p> <i>The following image shows the process flow </i></p>
-            <img src="img/flow.png">
+            <img class="img-fluid" src="img/flow.png">
             
             <p> When someone wants to access the message, he/she has to provide the image and the keyword. The encrypted message is extracted from the image and then decrypted using the keyword.</p>
 
@@ -178,7 +178,7 @@
 
         <div class="row m-0 p-0" style="background-color: #343A40;">
             <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-                <p class="h6">© 2020 Rutuparn Pawar ( <a style="color: white" href="https://github.com/InputBlackBoxOutput">InputBlackBoxOutput<a> )</p>
+                <p class="h6">© 2020 InputBlackBoxOutput</p>
             </div>
             <hr>
         </div>
@@ -197,7 +197,7 @@
                     <div class="modal-body">
                         <p> This website was created to let you embed encrypted messages in an image and then extract them back whenever you want</p>
                         <p> <a href="https://github.com/InputBlackBoxOutput/Image-Steganographer" target="_blank">See repository on GitHub</a></p>
-                        <p> Created by Rutuparn Pawar (InputBlackBoxOutput)</p>
+                        <p> Created by Rutuparn Pawar <br> (InputBlackBoxOutput)</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-block btn-secondary" data-dismiss="modal">Close</button>
@@ -220,7 +220,7 @@
                     <div class="modal-body">
                         <h5> Steps to embed message in an image: </h5>
                         <ol>
-                            <li> Upload an image. Alternatively you can use a random image provided by the website</li>
+                            <li> Upload an image or use a random image provided by the website</li>
                             <li> Enter the keyword </li>
                             <li> Enter the message </li>
                             <li> Press the embed & download button </li>
