--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
                 <form>
                     <div class=" row form-group">
                         <label>Keyword</label>
-                        <input type="text" class="form-control" id="embed-keyword" placeholder="Your keyword here">
+                        <input type="text" class="form-control" id="embed-keyword" placeholder="Enter keyword">
                     </div>
 
                     <div class=" row form-group">
                         <label>Message</label>
-                        <textarea class="form-control" id="embed-message" rows="3" placeholder="Your message here"
+                        <textarea class="form-control" id="embed-message" rows="3" placeholder="Enter message"
                             style="resize: none;"></textarea>
                     </div>
 
@@ -105,7 +105,7 @@
                 <form>
                     <div class="form-group">
                         <label>Keyword</label>
-                        <input type="text" class="form-control" id="extract-keyword" placeholder="Your keyword here">
+                        <input type="text" class="form-control" id="extract-keyword" placeholder=" Enter keyword">
                     </div>
 
                     <div>
@@ -282,10 +282,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="cipher.js"></script>
-    <script type="text/javascript" src="embed.js"></script>
-    <script type="text/javascript" src="extract.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="script/cipher.js"></script>
+    <script type="text/javascript" src="script/embed.js"></script>
+    <script type="text/javascript" src="script/extract.js"></script>
+    <script type="text/javascript" src="script/index.js"></script>
 
 
 </body>
