--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <label class="btn rounded btn-secondary mr-1 mb-0 mt-1" data-toggle="modal"
-                    data-target="#howToUseModal"> How to use? </label>
+                    data-target="#help"> Help </label>
                 <label class="btn rounded btn-secondary mr-1 mb-0 mt-1" data-toggle="modal" data-target="#aboutModal">
                     About </label>
             </ul>
@@ -237,7 +237,7 @@
     </div>
 
     <!-- How to use Modal-->
-    <div class="modal fade" id="howToUseModal" tabindex="-1" role="dialog" aria-labelledby="globalModalLabel"
+    <div class="modal fade" id="help" tabindex="-1" role="dialog" aria-labelledby="globalModalLabel"
         aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
